--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/permanent-marker": "^5.0.8",
     "@next/font": "^13.5.6",
     "framer-motion": "^10.12.16",
+    "gray-matter": "^4.0.3",
     "hamburger-react": "^2.5.0",
     "next": "13.4.3",
     "react": "18.2.0",
