--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fontsource/long-cang": "^5.0.11",
     "@fontsource/permanent-marker": "^5.0.8",
     "@next/font": "^13.5.6",
+    "axios": "^1.6.8",
     "framer-motion": "^10.12.16",
     "gray-matter": "^4.0.3",
     "hamburger-react": "^2.5.0",
     "next": "13.4.3",
+    "puppeteer": "^22.5.0",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
