--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
+    "@types/react": "^19.1.4",
     "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
